; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-au1xxx.c_au1xxx_start_ohc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-au1xxx.c_au1xxx_start_ohc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USBH_ENABLE_CE = common dso_local global i32 0, align 4
@USB_HOST_CONFIG = common dso_local global i32 0, align 4
@USBH_ENABLE_INIT = common dso_local global i32 0, align 4
@USBH_ENABLE_RD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @au1xxx_start_ohc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @au1xxx_start_ohc() #0 {
  %1 = load i32, i32* @USBH_ENABLE_CE, align 4
  %2 = load i32, i32* @USB_HOST_CONFIG, align 4
  %3 = call i32 @au_writel(i32 %1, i32 %2)
  %4 = call i32 (...) @au_sync()
  %5 = call i32 @udelay(i32 1000)
  %6 = load i32, i32* @USB_HOST_CONFIG, align 4
  %7 = call i32 @au_readl(i32 %6)
  %8 = load i32, i32* @USBH_ENABLE_INIT, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @USB_HOST_CONFIG, align 4
  %11 = call i32 @au_writel(i32 %9, i32 %10)
  %12 = call i32 (...) @au_sync()
  %13 = call i32 @udelay(i32 1000)
  br label %14

14:                                               ; preds = %23, %0
  %15 = load i32, i32* @USB_HOST_CONFIG, align 4
  %16 = call i32 @au_readl(i32 %15)
  %17 = load i32, i32* @USB_HOST_CONFIG, align 4
  %18 = call i32 @au_readl(i32 %17)
  %19 = load i32, i32* @USBH_ENABLE_RD, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  br i1 %22, label %23, label %25

23:                                               ; preds = %14
  %24 = call i32 @udelay(i32 1000)
  br label %14

25:                                               ; preds = %14
  ret void
}

declare dso_local i32 @au_writel(i32, i32) #1

declare dso_local i32 @au_sync(...) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @au_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
